--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Folders
+.vs/
+Bin/
+Intermediate/
+
 # Prerequisites
 *.d
 
@@ -6,6 +11,10 @@
 *.lo
 *.o
 *.obj
+
+# Databases
+*.pdb
+*.idb
 
 # Precompiled Headers
 *.gch
